--- a/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
+++ b/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
@@ -11,84 +11,81 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groceries</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/modernizr-2.8.3.js"></script>
-
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-</head>
-<body class="body-content">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        @Html.ActionLink("Home App", "AppList", "Home", null, new { @class = "navbar-brand" })
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <body class="body-content">
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            @if (this.Session["_CurrentUser"] != null)
-            {
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
-                        {
-                            @Html.ActionLink("Stores", "Index", "GroceriesStores", null, new { @class = "nav-link" })
-                        }
-                    </li>
-                </ul>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
-                        {
-                            @Html.ActionLink("Size", "Index", "SizeTypes", null, new { @class = "nav-link" })
-                        }
-                    </li>
-                </ul>
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
-                        {
-                            @Html.ActionLink("Grocery List", "Index", "GroceriesItemLists", null, new { @class = "nav-link" })
-                        }
-                    </li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+            @Html.ActionLink("Home App", "AppList", "Home", null, new { @class = "navbar-brand" })
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
-                        {
-                            @Html.ActionLink("All Items", "ShowAllItems", "GroceriesItemLists", null, new { @class = "nav-link" })
-                        }
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                @if (this.Session["_CurrentUser"] != null)
+                {
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
+                            {
+                                @Html.ActionLink("Stores", "Index", "GroceriesStores", null, new { @class = "nav-link" })
+                            }
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
+                            {
+                                @Html.ActionLink("Size", "Index", "SizeTypes", null, new { @class = "nav-link" })
+                            }
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
+                            {
+                                @Html.ActionLink("Grocery List", "Index", "GroceriesItemLists", null, new { @class = "nav-link" })
+                            }
+                        </li>
+                    </ul>
 
-
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
-                        {
-                            @Html.ActionLink("Items", "Index", "GroceriesItems", null, new { @class = "nav-link" })
-                        }
-                    </li>
-                </ul>
-            }
-    </nav>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
+                            {
+                                @Html.ActionLink("All Items", "ShowAllItems", "GroceriesItemLists", null, new { @class = "nav-link" })
+                            }
+                        </li>
+                    </ul>
 
 
-    <div class="container body-content" id="RenderBody">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p></p>
-        </footer>
-    </div>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Groceries").Equals(true))
+                            {
+                                @Html.ActionLink("Items", "Index", "GroceriesItems", null, new { @class = "nav-link" })
+                            }
+                        </li>
+                    </ul>
+                }
+        </nav>
 
 
-</body>
+        <div class="container body-content" id="RenderBody">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p></p>
+            </footer>
+        </div>
+
+
+    </body>
 </html>
 
 <style>
