--- a/HomeApps/Views/GroceriesItemLists/Create.cshtml
+++ b/HomeApps/Views/GroceriesItemLists/Create.cshtml
@@ -16,6 +16,11 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+    @if (ViewData["CreatedItem"] == "true")
+    {
+        <div style="color:red">Item Added.</div>
+        
+    }
 
 
     <div class="form-group">
