--- a/HomeApps/Views/WeightTrackers/Create.cshtml
+++ b/HomeApps/Views/WeightTrackers/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.WeightAmout, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.WeightAmout, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+            @Html.EditorFor(model => model.WeightAmout, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", @autocomplete = "off" } })
             @Html.ValidationMessageFor(model => model.WeightAmout, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -27,7 +27,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.WistSize, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.WistSize, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+            @Html.EditorFor(model => model.WistSize, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", @autocomplete = "off" } })
             @Html.ValidationMessageFor(model => model.WistSize, "", new { @class = "text-danger" })
         </div>
     </div>
